qa/suites: escape the parenthesis of the whitelist text
so we can avoid the warnings like

grep: Unmatched ( or \(

because we pass the whitelisted string to `egrep -v "$1"` directly.

Signed-off-by: Kefu Chai <kchai@redhat.com>

--- a/qa/suites/fs/thrash/overrides/whitelist_health.yaml
+++ b/qa/suites/fs/thrash/overrides/whitelist_health.yaml
@@ -2,7 +2,7 @@ overrides:
   ceph:
     log-whitelist:
       - overall HEALTH_
-      - (FS_DEGRADED)
-      - (MDS_FAILED)
-      - (MDS_DEGRADED)
-      - (FS_WITH_FAILED_MDS)
+      - \(FS_DEGRADED\)
+      - \(MDS_FAILED\)
+      - \(MDS_DEGRADED\)
+      - \(FS_WITH_FAILED_MDS\)
