--- a/qa/suites/rados/monthrash/workloads/pool-create-delete.yaml
+++ b/qa/suites/rados/monthrash/workloads/pool-create-delete.yaml
@@ -3,7 +3,7 @@ overrides:
     log-whitelist:
       - slow request
       - overall HEALTH_
-      - (POOL_APP_NOT_ENABLED)
+      - \(POOL_APP_NOT_ENABLED\)
 tasks:
 - exec:
     client.0:
