--- a/qa/suites/rados/verify/tasks/rados_api_tests.yaml
+++ b/qa/suites/rados/verify/tasks/rados_api_tests.yaml
@@ -3,12 +3,12 @@ overrides:
     log-whitelist:
       - reached quota
       - overall HEALTH_
-      - (CACHE_POOL_NO_HIT_SET)
-      - (POOL_FULL)
-      - (SMALLER_PGP_NUM)
-      - (REQUEST_SLOW)
-      - (CACHE_POOL_NEAR_FULL)
-      - (POOL_APP_NOT_ENABLED)
+      - \(CACHE_POOL_NO_HIT_SET\)
+      - \(POOL_FULL\)
+      - \(SMALLER_PGP_NUM\)
+      - \(REQUEST_SLOW\)
+      - \(CACHE_POOL_NEAR_FULL\)
+      - \(POOL_APP_NOT_ENABLED\)
     conf:
       client:
         debug ms: 1
