--- a/qa/suites/rbd/thrash/workloads/rbd_api_tests_copy_on_read.yaml
+++ b/qa/suites/rbd/thrash/workloads/rbd_api_tests_copy_on_read.yaml
@@ -9,7 +9,7 @@ overrides:
   ceph:
     log-whitelist:
       - overall HEALTH_
-      - (CACHE_POOL_NO_HIT_SET)
+      - \(CACHE_POOL_NO_HIT_SET\)
     conf:
       client:
         rbd clone copy on read: true
