--- a/qa/suites/upgrade/jewel-x/parallel/1-jewel-install/jewel.yaml
+++ b/qa/suites/upgrade/jewel-x/parallel/1-jewel-install/jewel.yaml
@@ -13,8 +13,8 @@ tasks:
     add_osds_to_crush: true
     log-whitelist:
       - overall HEALTH_
-      - (FS_
-      - (MDS_
+      - \(FS_
+      - \(MDS_
 - print: "**** done ceph"
 - install.upgrade:
     mon.a:
