--- a/qa/suites/fs/basic_functional/overrides/whitelist_health.yaml
+++ b/qa/suites/fs/basic_functional/overrides/whitelist_health.yaml
@@ -2,8 +2,8 @@ overrides:
   ceph:
     log-whitelist:
       - overall HEALTH_
-      - (FS_DEGRADED)
-      - (MDS_FAILED)
-      - (MDS_DEGRADED)
-      - (FS_WITH_FAILED_MDS)
-      - (MDS_DAMAGE)
+      - \(FS_DEGRADED\)
+      - \(MDS_FAILED\)
+      - \(MDS_DEGRADED\)
+      - \(FS_WITH_FAILED_MDS\)
+      - \(MDS_DAMAGE\)
