--- a/qa/suites/powercycle/osd/tasks/rados_api_tests.yaml
+++ b/qa/suites/powercycle/osd/tasks/rados_api_tests.yaml
@@ -2,7 +2,7 @@ overrides:
   ceph:
     log-whitelist:
       - reached quota
-      - (POOL_APP_NOT_ENABLED)
+      - \(POOL_APP_NOT_ENABLED\)
 tasks:
 - ceph-fuse:
 - workunit:
