--- a/qa/suites/rados/basic/tasks/rados_python.yaml
+++ b/qa/suites/rados/basic/tasks/rados_python.yaml
@@ -3,10 +3,10 @@ overrides:
     log-whitelist:
     - but it is still running
     - overall HEALTH_
-    - (OSDMAP_FLAGS)
-    - (PG_
-    - (OSD_
-    - (OBJECT_
+    - \(OSDMAP_FLAGS\)
+    - \(PG_
+    - \(OSD_
+    - \(OBJECT_
 tasks:
 - workunit:
     clients:
