--- a/qa/suites/rados/basic/tasks/rados_workunit_loadgen_mostlyread.yaml
+++ b/qa/suites/rados/basic/tasks/rados_workunit_loadgen_mostlyread.yaml
@@ -3,7 +3,7 @@ overrides:
     log-whitelist:
     - but it is still running
     - overall HEALTH_
-    - (POOL_APP_NOT_ENABLED)
+    - \(POOL_APP_NOT_ENABLED\)
 tasks:
 - workunit:
     clients:
