--- a/qa/suites/rados/monthrash/thrashers/force-sync-many.yaml
+++ b/qa/suites/rados/monthrash/thrashers/force-sync-many.yaml
@@ -2,8 +2,8 @@ overrides:
   ceph:
     log-whitelist:
       - overall HEALTH_
-      - (MON_DOWN)
-      - (TOO_FEW_PGS)
+      - \(MON_DOWN\)
+      - \(TOO_FEW_PGS\)
 tasks:
 - mon_thrash:
     revive_delay: 90
