--- a/qa/suites/rados/monthrash/workloads/rados_5925.yaml
+++ b/qa/suites/rados/monthrash/workloads/rados_5925.yaml
@@ -2,7 +2,7 @@ overrides:
   ceph:
      log-whitelist:
        - overall HEALTH_
-       - (POOL_APP_NOT_ENABLED)
+       - \(POOL_APP_NOT_ENABLED\)
 tasks:
 - exec:
     client.0:
