--- a/qa/suites/rados/objectstore/ceph_objectstore_tool.yaml
+++ b/qa/suites/rados/objectstore/ceph_objectstore_tool.yaml
@@ -14,9 +14,9 @@ tasks:
         osd max object namespace len: 64
     log-whitelist:
       - overall HEALTH_
-      - (OSDMAP_FLAGS)
-      - (OSD_
-      - (PG_
-      - (TOO_FEW_PGS)
+      - \(OSDMAP_FLAGS\)
+      - \(OSD_
+      - \(PG_
+      - \(TOO_FEW_PGS\)
 - ceph_objectstore_tool:
     objects: 20
