--- a/qa/suites/rados/singleton-nomsgr/all/full-tiering.yaml
+++ b/qa/suites/rados/singleton-nomsgr/all/full-tiering.yaml
@@ -6,9 +6,9 @@ overrides:
     log-whitelist:
       - is full
       - overall HEALTH_
-      - (POOL_FULL)
-      - (POOL_NEAR_FULL)
-      - (CACHE_POOL_NO_HIT_SET)
+      - \(POOL_FULL\)
+      - \(POOL_NEAR_FULL\)
+      - \(CACHE_POOL_NO_HIT_SET\)
 tasks:
 - install:
 - ceph:
