--- a/qa/suites/rados/singleton-nomsgr/all/multi-backfill-reject.yaml
+++ b/qa/suites/rados/singleton-nomsgr/all/multi-backfill-reject.yaml
@@ -13,9 +13,9 @@ tasks:
 - ceph:
     log-whitelist:
       - overall HEALTH_
-      - (PG_
-      - (OSD_
-      - (OBJECT_
+      - \(PG_
+      - \(OSD_
+      - \(OBJECT_
     conf:
       osd:
         osd debug reject backfill probability: .3
