--- a/qa/suites/rados/singleton/all/rebuild-mondb.yaml
+++ b/qa/suites/rados/singleton/all/rebuild-mondb.yaml
@@ -17,10 +17,10 @@ tasks:
     log-whitelist:
       - no reply from
       - overall HEALTH_
-      - (MON_DOWN)
-      - (OSDMAP_FLAGS)
-      - (OSD_
-      - (PG_
+      - \(MON_DOWN\)
+      - \(OSDMAP_FLAGS\)
+      - \(OSD_
+      - \(PG_
 - full_sequential:
   - radosbench:
       clients: [client.0]
