--- a/qa/suites/rados/thrash/workloads/rados_api_tests.yaml
+++ b/qa/suites/rados/thrash/workloads/rados_api_tests.yaml
@@ -2,7 +2,7 @@ overrides:
   ceph:
     log-whitelist:
       - reached quota
-      - (POOL_APP_NOT_ENABLED)
+      - \(POOL_APP_NOT_ENABLED\)
     crush_tunables: hammer
     conf:
       client:
