--- a/qa/suites/rados/verify/tasks/mon_recovery.yaml
+++ b/qa/suites/rados/verify/tasks/mon_recovery.yaml
@@ -2,9 +2,9 @@ overrides:
   ceph:
     log-whitelist:
       - overall HEALTH_
-      - (MON_DOWN)
-      - (OSDMAP_FLAGS)
-      - (SMALLER_PGP_NUM)
-      - (POOL_APP_NOT_ENABLED)
+      - \(MON_DOWN\)
+      - \(OSDMAP_FLAGS\)
+      - \(SMALLER_PGP_NUM\)
+      - \(POOL_APP_NOT_ENABLED\)
 tasks:
 - mon_recovery:
