--- a/qa/suites/rbd/basic/tasks/rbd_api_tests_old_format.yaml
+++ b/qa/suites/rbd/basic/tasks/rbd_api_tests_old_format.yaml
@@ -2,7 +2,7 @@ overrides:
   ceph:
     log-whitelist:
       - overall HEALTH_
-      - (CACHE_POOL_NO_HIT_SET)
+      - \(CACHE_POOL_NO_HIT_SET\)
 tasks:
 - workunit:
     clients:
