--- a/qa/suites/rbd/singleton/all/rbd_mirror.yaml
+++ b/qa/suites/rbd/singleton/all/rbd_mirror.yaml
@@ -6,7 +6,7 @@ tasks:
     fs: xfs
     log-whitelist:
       - overall HEALTH_
-      - (CACHE_POOL_NO_HIT_SET)
+      - \(CACHE_POOL_NO_HIT_SET\)
 - workunit:
     clients:
       all: [rbd/test_rbd_mirror.sh]
