--- a/qa/suites/smoke/basic/tasks/mon_thrash.yaml
+++ b/qa/suites/smoke/basic/tasks/mon_thrash.yaml
@@ -2,7 +2,7 @@ overrides:
   ceph:
     log-whitelist:
       - reached quota
-      - (POOL_APP_NOT_ENABLED)
+      - \(POOL_APP_NOT_ENABLED\)
     conf:
       global:
         ms inject delay max: 1
