qa/suites: more whitelisting
Signed-off-by: Kefu Chai <kchai@redhat.com>

--- a/qa/suites/rados/objectstore/ceph_objectstore_tool.yaml
+++ b/qa/suites/rados/objectstore/ceph_objectstore_tool.yaml
@@ -18,5 +18,6 @@ tasks:
       - \(OSD_
       - \(PG_
       - \(TOO_FEW_PGS\)
+      - \(POOL_APP_NOT_ENABLED\)
 - ceph_objectstore_tool:
     objects: 20
