--- a/qa/suites/rados/singleton-nomsgr/all/full-tiering.yaml
+++ b/qa/suites/rados/singleton-nomsgr/all/full-tiering.yaml
@@ -9,6 +9,7 @@ overrides:
       - \(POOL_FULL\)
       - \(POOL_NEAR_FULL\)
       - \(CACHE_POOL_NO_HIT_SET\)
+      - \(CACHE_POOL_NEAR_FULL\)
 tasks:
 - install:
 - ceph:
