qa/suites/rados/monthrash/worklaods/rados_api_tests: whitelist SMALLER_PGP_NUM
The rados/test.sh fiddles with pg_num.

Signed-off-by: Sage Weil <sage@redhat.com>

--- a/qa/suites/rados/monthrash/workloads/rados_api_tests.yaml
+++ b/qa/suites/rados/monthrash/workloads/rados_api_tests.yaml
@@ -4,11 +4,13 @@ overrides:
       - reached quota
       - overall HEALTH_
       - \(CACHE_POOL_NO_HIT_SET\)
+      - \(CACHE_POOL_NEAR_FULL\)
       - \(POOL_FULL\)
       - \(REQUEST_SLOW\)
       - \(MON_DOWN\)
       - \(PG_
       - \(POOL_APP_NOT_ENABLED\)
+      - \(SMALLER_PGP_NUM\)
     conf:
       global:
         debug objecter: 20
