qa/suites/upgrade/jewel-x/parallel: whitelist OSD_DOWN
We restart OSDs during the upgrade.

Signed-off-by: Sage Weil <sage@redhat.com>

--- a/qa/suites/upgrade/jewel-x/parallel/1-jewel-install/jewel.yaml
+++ b/qa/suites/upgrade/jewel-x/parallel/1-jewel-install/jewel.yaml
@@ -15,6 +15,7 @@ tasks:
       - overall HEALTH_
       - \(FS_
       - \(MDS_
+      - \(OSD_
 - print: "**** done ceph"
 - install.upgrade:
     mon.a:
