qa/suites/upgrade/*/parallel: disable POOL_APP_NOT_ENABLED
There is some other random workload running (that creates pools)
while we upgrade and wait for healthy.  Just disable the warning
for these tests.

Signed-off-by: Sage Weil <sage@redhat.com>

--- a/qa/suites/upgrade/jewel-x/parallel/1-jewel-install/jewel.yaml
+++ b/qa/suites/upgrade/jewel-x/parallel/1-jewel-install/jewel.yaml
@@ -16,6 +16,9 @@ tasks:
       - \(FS_
       - \(MDS_
       - \(OSD_
+    conf:
+      mon:
+        mon warn on pool no app: false
 - print: "**** done ceph"
 - install.upgrade:
     mon.a:
