qa/suites/upgrade/*-x/parallel: whitelist more stuff
Signed-off-by: Sage Weil <sage@redhat.com>

--- a/qa/suites/upgrade/jewel-x/parallel/1-jewel-install/jewel.yaml
+++ b/qa/suites/upgrade/jewel-x/parallel/1-jewel-install/jewel.yaml
@@ -16,6 +16,9 @@ tasks:
       - \(FS_
       - \(MDS_
       - \(OSD_
+      - \(MON_DOWN\)
+      - \(CACHE_POOL_NO_HIT_SET\)
+      - Monitor daemon marked osd
     conf:
       mon:
         mon warn on pool no app: false
