qa/suites/upgrade/jewel-x/parallel: more whitelisting
Signed-off-by: Sage Weil <sage@redhat.com>

--- a/qa/suites/upgrade/jewel-x/parallel/1-jewel-install/jewel.yaml
+++ b/qa/suites/upgrade/jewel-x/parallel/1-jewel-install/jewel.yaml
@@ -17,7 +17,10 @@ tasks:
       - \(MDS_
       - \(OSD_
       - \(MON_DOWN\)
-      - \(CACHE_POOL_NO_HIT_SET\)
+      - \(CACHE_POOL_
+      - \(POOL_
+      - \(MGR_DOWN\)
+      - \(PG_
       - Monitor daemon marked osd
     conf:
       mon:
