qa/suites/upgarde/jewel-x/parallel: more whitelisting
Signed-off-by: Sage Weil <sage@redhat.com>

--- a/qa/suites/upgrade/jewel-x/parallel/1-jewel-install/jewel.yaml
+++ b/qa/suites/upgrade/jewel-x/parallel/1-jewel-install/jewel.yaml
@@ -22,6 +22,7 @@ tasks:
       - \(MGR_DOWN\)
       - \(PG_
       - Monitor daemon marked osd
+      - Behind on trimming
     conf:
       mon:
         mon warn on pool no app: false
