test/librbd: make fsx build on non-linux platform
(without krbd and nbd)

Signed-off-by: Mykola Golub <mgolub@mirantis.com>

--- a/src/test/librbd/CMakeLists.txt
+++ b/src/test/librbd/CMakeLists.txt
@@ -125,26 +125,27 @@ target_link_libraries(ceph_test_librbd_api
 set_target_properties(ceph_test_librbd_api PROPERTIES COMPILE_FLAGS
   ${UNITTEST_CXX_FLAGS})
 
-if(LINUX)
-  add_executable(ceph_test_librbd_fsx
-    fsx.cc
-    $<TARGET_OBJECTS:common_texttable_obj>
-    )
+add_executable(ceph_test_librbd_fsx
+  fsx.cc
+  $<TARGET_OBJECTS:common_texttable_obj>
+  )
+target_link_libraries(ceph_test_librbd_fsx
+  librbd
+  librados
+  journal
+  global
+  m
+  ${CMAKE_DL_LIBS}
+  ${CRYPTO_LIBS}
+  ${EXTRALIBS}
+  )
+if(WITH_KRBD)
   target_link_libraries(ceph_test_librbd_fsx
-    librbd
-    librados
-    journal
-    krbd
-    global
-    m
-    ${CMAKE_DL_LIBS}
-    ${CRYPTO_LIBS}
-    ${EXTRALIBS}
-    )
-  install(TARGETS
-    ceph_test_librbd_fsx
-    DESTINATION ${CMAKE_INSTALL_BINDIR})
-endif(LINUX)
+    krbd)
+endif()
+install(TARGETS
+  ceph_test_librbd_fsx
+  DESTINATION ${CMAKE_INSTALL_BINDIR})
 
 install(TARGETS
   ceph_test_librbd
