ceph-volume: setup nodes for testinfra testing
This uses the playbook that exists in ceph-ansible to prepare the nodes for
testing by installing net-tools.

Signed-off-by: Andrew Schoen <aschoen@redhat.com>
(cherry picked from commit 97b216fdd1657b34db93b264ce814a8f72434d7b)

--- a/src/ceph-volume/ceph_volume/tests/functional/tox.ini
+++ b/src/ceph-volume/ceph_volume/tests/functional/tox.ini
@@ -27,11 +27,13 @@ commands=
   bash {toxinidir}/scripts/generate_ssh_config.sh {changedir}
 
   # create logical volumes to test with on the vms
-  ansible-playbook -vv -i {changedir}/hosts {toxinidir}/setup.yml
   ansible-playbook -vv -i {changedir}/hosts {envdir}/tmp/ceph-ansible/tests/functional/lvm_setup.yml
 
   # use ceph-ansible to deploy a ceph cluster on the vms
   ansible-playbook -vv -i {changedir}/hosts {envdir}/tmp/ceph-ansible/site.yml.sample --extra-vars "fetch_directory={changedir}/fetch ceph_dev_branch={env:CEPH_DEV_BRANCH:master} ceph_dev_sha1={env:CEPH_DEV_SHA1:latest}"
+
+  # prepare nodes for testing with testinfra
+  ansible-playbook -vv -i {changedir}/hosts {envdir}/tmp/ceph-ansible/tests/functional/setup.yml
 
   # test cluster state using ceph-ansible tests
   testinfra -n 4 --sudo -v --connection=ansible --ansible-inventory={changedir}/hosts {envdir}/tmp/ceph-ansible/tests/functional/tests
