ceph-volume: create a centos7 factor for functional testing
We want to run these tests on multiple distros so this change sets the
foundation for that.

Signed-off-by: Andrew Schoen <aschoen@redhat.com>
(cherry picked from commit c8e3be6faed1c062826117bc1355b7b752c01bd4)

--- a/src/ceph-volume/ceph_volume/tests/functional/tox.ini
+++ b/src/ceph-volume/ceph_volume/tests/functional/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {create,prepare_activate}
+envlist = {centos7}-{create,prepare_activate}
 skipsdist = True
 
 [testenv]
@@ -18,7 +18,7 @@ deps=
   testinfra==1.6.0
   pytest-xdist
 changedir=
-  create: {toxinidir}/create
+  centos7-create: {toxinidir}/centos7/create
   prepare_activate: {toxinidir}/prepare_activate
 commands=
   git clone -b {env:CEPH_ANSIBLE_BRANCH:master} --single-branch https://github.com/ceph/ceph-ansible.git {envdir}/tmp/ceph-ansible
