--- a/src/ceph-volume/ceph_volume/tests/functional/tox.ini
+++ b/src/ceph-volume/ceph_volume/tests/functional/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = {centos7}-{create,prepare_activate}
+envlist = {centos7,xenial}-{create,prepare_activate}
 skipsdist = True
 
 [testenv]
@@ -19,6 +19,7 @@ deps=
   pytest-xdist
 changedir=
   centos7-create: {toxinidir}/centos7/create
+  xenial-create: {toxinidir}/xenial/create
   prepare_activate: {toxinidir}/prepare_activate
 commands=
   git clone -b {env:CEPH_ANSIBLE_BRANCH:master} --single-branch https://github.com/ceph/ceph-ansible.git {envdir}/tmp/ceph-ansible
