ceph-volume: add placeholders for prepare_activate testing in tox.ini
Signed-off-by: Andrew Schoen <aschoen@redhat.com>
(cherry picked from commit 852a94734f69bfb5544e2d3af34b9e71057df851)

--- a/src/ceph-volume/ceph_volume/tests/functional/tox.ini
+++ b/src/ceph-volume/ceph_volume/tests/functional/tox.ini
@@ -20,7 +20,10 @@ deps=
 changedir=
   centos7-create: {toxinidir}/centos7/create
   xenial-create: {toxinidir}/xenial/create
-  prepare_activate: {toxinidir}/prepare_activate
+  # TODO: these are placeholders for now, eventually we want to
+  # test the prepare/activate workflow of ceph-volume as well
+  xenial-prepare_activate: {toxinidir}/xenial/prepare_activate
+  centos7-prepare_activate: {toxinidir}/xenial/prepare_activate
 commands=
   git clone -b {env:CEPH_ANSIBLE_BRANCH:master} --single-branch https://github.com/ceph/ceph-ansible.git {envdir}/tmp/ceph-ansible
 
