ceph-volume: adds CEPH_VOLUME_DEBUG=1 to functional tests
This will show us tracebacks if ceph-volume fails

Signed-off-by: Andrew Schoen <aschoen@redhat.com>
(cherry picked from commit 5a90f4c577bf371a36bf602dc8ea01663aaffe00)

--- a/src/ceph-volume/ceph_volume/tests/functional/tox.ini
+++ b/src/ceph-volume/ceph_volume/tests/functional/tox.ini
@@ -13,6 +13,7 @@ setenv=
   ANSIBLE_STDOUT_CALLBACK = debug
   ANSIBLE_RETRY_FILES_ENABLED = False
   VAGRANT_CWD = {changedir}
+  CEPH_VOLUME_DEBUG = 1
 deps=
   ansible==2.2.3
   testinfra==1.6.0
