--- a/qa/suites/upgrade/jewel-x/point-to-point-x/point-to-point-upgrade.yaml
+++ b/qa/suites/upgrade/jewel-x/point-to-point-x/point-to-point-upgrade.yaml
@@ -20,6 +20,7 @@ overrides:
     conf:
       mon:
         mon debug unsafe allow tier with nonempty snaps: true
+        mon warn on pool no app: false
       osd:
         osd map max advance: 1000
 roles:
