--- a/qa/suites/upgrade/jewel-x/parallel/1-jewel-install/jewel.yaml
+++ b/qa/suites/upgrade/jewel-x/parallel/1-jewel-install/jewel.yaml
@@ -31,3 +31,10 @@ tasks:
     mon.a:
     mon.b:
 - print: "**** done install.upgrade mon.a and mon.b"
+- parallel:
+    - workload
+    - upgrade-sequence
+- print: "**** done parallel"
+- install.upgrade:
+    client.0:
+- print: "**** done install.upgrade on client.0"
