ceph.spec: provide libxio 1.7 and obsolete libxio <= 1.7
Signed-off-by: Nathan Cutler <ncutler@suse.com>

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -261,7 +261,8 @@ Requires:      psmisc
 Requires:      which
 %if 0%{?suse_version}
 Recommends:    ntp-daemon
-Obsoletes:     libxio
+Provides:      libxio = 1.7
+Obsoletes:     libxio <= 1.7
 %endif
 %description base
 Base is the package that includes all the files shared amongst ceph servers
@@ -283,7 +284,8 @@ Requires:	python-prettytable
 %endif
 %if 0%{?suse_version}
 Requires:	python-PrettyTable
-Obsoletes:      libxio
+Provides:       libxio = 1.7
+Obsoletes:      libxio <= 1.7
 %endif
 Requires:	python-requests
 %{?systemd_requires}
