--- a/src/os/CMakeLists.txt
+++ b/src/os/CMakeLists.txt
@@ -28,9 +28,11 @@ if(WITH_BLUESTORE)
     bluestore/BlueRocksEnv.cc
     bluestore/BlueStore.cc
     bluestore/bluestore_types.cc
+    bluestore/fastbmap_allocator_impl.cc
     bluestore/FreelistManager.cc
     bluestore/StupidAllocator.cc
     bluestore/BitMapAllocator.cc
+    bluestore/BitmapFastAllocator.cc
     bluestore/BitAllocator.cc
   )
 endif(WITH_BLUESTORE)
