--- a/src/test/objectstore/CMakeLists.txt
+++ b/src/test/objectstore/CMakeLists.txt
@@ -103,12 +103,23 @@ if(WITH_BLUESTORE)
   add_ceph_unittest(unittest_bit_alloc)
   target_link_libraries(unittest_bit_alloc os global)
 
+
   add_executable(unittest_alloc
     Allocator_test.cc
     $<TARGET_OBJECTS:unit-main>
     )
   add_ceph_unittest(unittest_alloc)
   target_link_libraries(unittest_alloc os global)
+
+  add_executable(unittest_fastbmap_allocator
+    fastbmap_allocator_test.cc
+    $<TARGET_OBJECTS:unit-main>
+    )
+  add_ceph_unittest(unittest_fastbmap_allocator)
+  target_link_libraries(unittest_fastbmap_allocator os global)
+
+  set_target_properties(unittest_fastbmap_allocator PROPERTIES COMPILE_FLAGS
+  ${UNITTEST_CXX_FLAGS})
 
   # unittest_bluefs
   add_executable(unittest_bluefs
