os/bluestore: add new bitmap allocator
Signed-off-by: Igor Fedotov <ifedotov@suse.com>
(cherry picked from commit 631041a7b788eaaf010f1e39f58b5546ab5580fc)

--- a/src/os/CMakeLists.txt
+++ b/src/os/CMakeLists.txt
@@ -28,10 +28,12 @@ if(HAVE_LIBAIO)
     bluestore/BlueRocksEnv.cc
     bluestore/BlueStore.cc
     bluestore/bluestore_types.cc
+    bluestore/fastbmap_allocator_impl.cc
     bluestore/FreelistManager.cc
     bluestore/KernelDevice.cc
     bluestore/StupidAllocator.cc
     bluestore/BitMapAllocator.cc
+    bluestore/BitmapFastAllocator.cc
     bluestore/BitAllocator.cc
     bluestore/aio.cc
   )
