add mon_allow_pool_delete to true
Signed-off-by: Vasu Kulkarni <vasu@redhat.com>

--- a/qa/suites/perf-basic/objectstore/bluestore.yaml
+++ b/qa/suites/perf-basic/objectstore/bluestore.yaml
@@ -13,7 +13,7 @@ overrides:
       ceph_conf_overrides:
         global:
           osd objectstore: bluestore
-          bluestore block size: 96636764160
+          mon allow pool delete: true
       ceph_mgr_modules:
          - status
          - restful
