--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -122,5 +122,5 @@ if(WITH_RBD)
   endif()
 endif(WITH_RBD)
 
-add_subdirectory(ceph_immutable_object_cache)
+add_subdirectory(immutable_object_cache)
 add_subdirectory(ceph-dencoder)
