--- a/src/test/immutable_object_cache/CMakeLists.txt
+++ b/src/test/immutable_object_cache/CMakeLists.txt
@@ -5,6 +5,7 @@ add_executable(unittest_ceph_immutable_obj_cache
   test_sync_file.cc
   test_DomainSocket.cc
   test_multi_session.cc
+  test_object_store.cc
   )
 add_ceph_unittest(unittest_ceph_immutable_obj_cache)
 
