--- a/src/test/immutable_object_cache/CMakeLists.txt
+++ b/src/test/immutable_object_cache/CMakeLists.txt
@@ -3,8 +3,8 @@ add_executable(unittest_ceph_immutable_obj_cache
   test_main.cc
   test_SimplePolicy.cc
   test_sync_file.cc
-  test_DomainSocket.cc
-  test_multi_session.cc
+  #test_DomainSocket.cc // TODO
+  #test_multi_session.cc // TODO
   test_object_store.cc
   test_message.cc
   )
