Set force-branch and force-repo explicitly in the s3tests-go.yaml
Signed-off-by: Antoaneta Damyanova <adamyanova@gmail.com>

--- a/qa/suites/rgw/verify/tasks/s3tests-go.yaml
+++ b/qa/suites/rgw/verify/tasks/s3tests-go.yaml
@@ -2,4 +2,4 @@ tasks:
 - s3tests-go:
     client.0:
       force-branch: master
-      force-repo: https://github.com/adamyanova/go_s3tests.git
+      force-repo: https://github.com/ceph/go_s3tests.git
