--- a/src/crimson/osd/CMakeLists.txt
+++ b/src/crimson/osd/CMakeLists.txt
@@ -5,6 +5,9 @@ add_executable(crimson-osd
   osd.cc
   osd_meta.cc
   pg.cc
-  pg_meta.cc)
+  pg_meta.cc
+  recovery_machine.cc
+  recovery_state.cc
+  recovery_states.cc)
 target_link_libraries(crimson-osd
   crimson-common crimson-os crimson fmt::fmt)
